@@ -2,7 +2,6 @@ package com.ssafy.vinopener.domain.bookmark.service;
 
 import com.ssafy.vinopener.domain.bookmark.data.dto.request.BookmarkCreateRequest;
 import com.ssafy.vinopener.domain.bookmark.data.dto.response.BookmarkGetListResponse;
-import com.ssafy.vinopener.domain.bookmark.data.entity.BookmarkEntity;
 import com.ssafy.vinopener.domain.bookmark.data.mapper.BookmarkMapper;
 import com.ssafy.vinopener.domain.bookmark.exception.BookmarkErrorCode;
 import com.ssafy.vinopener.domain.bookmark.repository.BookmarkRepository;
@@ -10,7 +9,6 @@ import com.ssafy.vinopener.domain.user.repository.UserRepository;
 import com.ssafy.vinopener.domain.wine.repository.WineRepository;
 import com.ssafy.vinopener.global.exception.VinopenerException;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -27,32 +25,36 @@ public class BookmarkService {
     /**
      * 즐겨찾기에 와인 추가
      *
-     * @param request 즐겨찾기에 추가 요청할 wineId
-     * @param userId  유저 ID
+     * @param bookmarkCreateRequest 즐겨찾기에 추가 요청
+     * @param userId                유저 ID
      * @return 북마크 ID
      */
     @Transactional
-    public Long create(final BookmarkCreateRequest request,
+    public Long create(final BookmarkCreateRequest bookmarkCreateRequest,
             Long userId) {
-        var wine = wineRepository.findById(request.wineId())
+        var user = userRepository.findById(userId)
+                .orElseThrow(() -> new VinopenerException(BookmarkErrorCode.USER_NOT_FOUND));
+
+        var wine = wineRepository.findById(bookmarkCreateRequest.wineId())
                 .orElseThrow(() -> new VinopenerException(BookmarkErrorCode.WINE_NOT_FOUND));
 
-//        BookmarkEntity bookmark = bookmarkMapper.toEntity(userId, request, wine);
         return bookmarkRepository
-                .save(bookmarkMapper.toEntity(userId, request, wine))
+                .save(bookmarkMapper.toEntity(userId, bookmarkCreateRequest, wine))
                 .getId();
     }
 
     /**
      * 즐겨찾기에 와인 삭제
      *
-     * @param userId 유저 ID
-     * @param wineId 와인 ID
+     * @param bookmarkId 북마크 ID
+     * @param userId     유저 ID
      */
     @Transactional
-    public void delete(final Long userId, final Long wineId) {
-        checkExists(userId, wineId);
-        bookmarkRepository.deleteByUserIdAndWineId(userId, wineId);
+    public void delete(
+            final Long bookmarkId,
+            final Long userId) {
+        checkExists(bookmarkId, userId);
+        bookmarkRepository.deleteByIdAndUserId(bookmarkId, userId);
     }
 
     /**
@@ -61,22 +63,21 @@ public class BookmarkService {
      * @param userId 유저 ID
      * @return 즐겨찾기한 와인 목록
      */
-    @Transactional
+    @Transactional(readOnly = true)
     public List<BookmarkGetListResponse> getList(Long userId) {
-        List<BookmarkEntity> bookmarks = bookmarkRepository.findAllByUserId(userId);
-        return bookmarks.stream()
+        return bookmarkRepository.findAllByUserId(userId).stream()
                 .map(bookmarkMapper::toGetListResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * 즐겨찾기 존재 여부 확인
      *
-     * @param userId 유저 ID
-     * @param wineId 와인 ID
+     * @param bookmarkId 북마크 ID
+     * @param userId     유저 ID
      */
-    private void checkExists(final Long userId, final Long wineId) {
-        if (!bookmarkRepository.existsByUserIdAndWineId(userId, wineId)) {
+    private void checkExists(final Long bookmarkId, final Long userId) {
+        if (!bookmarkRepository.existsByIdAndUserId(bookmarkId, userId)) {
             throw new VinopenerException(BookmarkErrorCode.BOOKMARK_NOT_FOUND);
         }
     }
